lib/type/static/testdata/valid/module.lua
-- Standard module pattern.
local M = {}

function M.add(a, b) return a + b end
function M.greet(name) return "hello, " .. name end

return M
